Added option to rent plost
